# ITT

./: .zenodo.json  CITATION.cff  README.md  pyproject.toml
evaluation/GTFS/: gtfs.r2rml.ttl  gtfs_mongo.rml.ttl  gtfs_mongo.xr2rml.ttl  gtfs_mysql.r2rml.ttl
evaluation/GTFS/intta-sql/: q10.rq  q13.rq  q17.rq  q7.rq  q8.rq
evaluation/GTFS/itt-sql/: q1.rq  q12.rq  q14.rq  q15.rq  q16.rq  q18.rq  q2.rq  q3.rq  q4.rq  q5.rq  q6.rq  q9.rq
evaluation/GTFS/ontop-sql/: q1.rq  q10.rq  q12.rq  q13.rq  q14.rq  q15.rq  q16.rq  q17.rq  q18.rq  q2.rq  q3.rq  q4.rq  q5.rq  q6.rq  q7.rq  q8.rq  q9.rq
evaluation/GTFS/queries/: q10.rq  q12.rq  q13.rq  q14.rq  q15.rq  q16.rq  q17.rq  q18.rq  q2.rq  q3.rq  q4.rq  q5.rq  q6.rq  q7.rq  q8.rq  q9.rq
evaluation/LUBM4OBDA/: lubm4obda.r2rml.ttl
evaluation/LUBM4OBDA/intta-sql/: q01.rq  q02.rq  q05.rq  q06.rq  q07.rq  q08.rq  q10.rq  q11.rq
evaluation/LUBM4OBDA/itt-sql/: q03.rq  q04.rq  q09.rq  q12.rq  q13.rq  q14.rq
evaluation/LUBM4OBDA/ontop-sql/: q01.rq  q02.rq  q03.rq  q04.rq  q05.rq  q06.rq  q07.rq  q08.rq  q09.rq  q10.rq  q11.rq  q12.rq  q13.rq  q14.rq
src/itt/: __init__.py  __main__.py  args_parser.py  config.py  constants.py  materializer.py  sparql_translator.py  utils.py
src/itt/data_source/: data_file.py  mongo_database.py  relational_database.py
src/itt/fnml/: fnml_executer.py
src/itt/mapping/: mapping_constants.py  mapping_parser.py  mapping_partitioner.py  mapping_simplifier.py
